// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Flashing false 1`] = `
<div>
  <div
    class="flashing flashing--off"
  >
    test
  </div>
</div>
`;

exports[`renders Flashing true 1`] = `
<div>
  <div
    class="flashing"
  >
    test
  </div>
</div>
`;
